# reTerminal-eink-signage

./: .gitignore  .gitleaks.toml  LICENSE  PROTOCOL.md  README.md
.github/workflows/: gitleaks.yml
backend/: Dockerfile  config.demo.yaml  config.example.yaml  go.mod  go.sum
backend/cmd/broker/: main.go
backend/cmd/preview/: main.go
backend/deploy/k3s/: alerts.yaml  broker-tls.yaml.example  broker.yaml.example  buildkitd.toml.example  coredns-displays.yaml.example  grafana-dashboard-configmap.yaml.example  grafana-dashboard.json  ntp.yaml.example  registry.yaml.example
backend/internal/admin/: view.go  view_test.go
backend/internal/auth/: credentials.go  credentials_test.go  session.go  session_test.go  totp.go  totp_test.go
backend/internal/cache/: cache.go  cache_test.go
backend/internal/calendar/: calendar.go  calendar_test.go  demo.go  google.go
backend/internal/config/: config.go  (+3 more)
docs/: BUILD-GUIDE.md  DASHBOARD.md  HARDWARE.md  POWER.md  SECURITY.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  app_state.hpp  config.hpp  epd_spectra6.cpp  epd_spectra6.hpp  net_client.cpp  net_client.hpp  nvs_store.cpp  nvs_store.hpp  ota.cpp  ota.hpp  power.cpp  power.hpp  protocol.hpp  sensors.cpp  sensors.hpp  telemetry.cpp  telemetry.hpp  wifi_fast.cpp  wifi_fast.hpp
firmware/main/certs/: README.md
firmware/secure/: README.md
tools/: fake_device.sh  gcp_setup.py  provision_all.sh  provision_device.sh  requirements.txt  rooms.csv.example  setup_wif.sh  share_rooms.sh
(+47 files in other folders)
